--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "unist-util-visit": "^2.0.3"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.9.2",
     "eslint": "^7.4.0"
   },
   "scripts": {
