feat: updates actions to use changesets

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 14
           registry-url: https://registry.npmjs.org/
       - run: yarn --frozen-lockfile
-      - run: yarn publish
+      - run: yarn changeset publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
 
