--- a/manifest.yml
+++ b/manifest.yml
@@ -1,1 +1,4 @@
 name: netlify-plugin-csp-hash
+inputs: 
+  - name: unsafeStyles
+    description: Value of "true" allows unsafe-inline styles in your site. This leaves the style tag hashes out of your CSP headers. This gets around issues from Netlify transforming urls and other things after the plugin runs. Can instead use CSP_HEADERS_UNSAFE_STYLES environment variable. 
